  - new panel for "Team code" provides quick access to team code settings (#2899)
* tasks
  - custom "start requires arm" setting (#2782)
  - new option to disable OLC optimisation
  - MAT: remove "auto add" turnpoint feature when fly over it
  - update the calculator without a GPS fix (#2876)
  - fix task speed and time estimates before task start (#2876)
* route planner
  - ignore inactive and acknowledged airspaces (#2866)
* waypoint editor
  - delete waypoint implemented
  - CUP file support added
* devices
  - enabling/disabling devices on-the-fly
  - "debug" button
  - more robust midnight wraparound handling (#2857)
  - new driver from Cambridge L-Nav
  - LX: faster LXNAV Nano detection over Bluetooth
* Android
  - support IOIO via OpenAccessory (Android 4.x)
  - support USB host mode and USB-RS232 adapters on the Nook (#2886)
  - show Bluetooth name instead of MAC address in device list

Version 6.6.3 - not yet released
* Android
  - fix compatibility issue with Android 2.2

Version 6.6.2 - 2013/06/12
* map
  - fix misplaced topography labels (#2564)
  - fix keyboard panning with track up (#2908)
* infoboxes
  - ensure that the unit symbol is visible
  - fix ballast display in vario gauge (#2911)
* tasks
  - update all settings after task type change
* devices
  - Volkslogger: fix IGC file download on Windows CE
  - EWmicroRecorder: fix corrupt task declaration (#2921)
  - fix potential crash when garbage is received from device
  - fix IOIO reconnect
  - generate G record even when first device has no GPS (#2849)
* cross section
  - also display unknown airspace types (#2884)
* Raspberry Pi
  - fix instant crash (#2922)
* Altair
  - never override data path (#2509)
* Android
  - faster startup

Version 6.6.1 - 2013/05/08
* cross section
  - fix airspace display after display rotation (#2825)
* user interface
  - fix malformed name in airspace warning dialog (#2813)
  - don't lost focus to waypoint list on Altair (#2835)